# langfuse-observability

./: .env.example  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.worker  Makefile  README-Docker.md  client_example.py  client_example_async.py  client_example_structured.py  config.example.py  deployment-example.py  docker-compose.yml  pyproject.toml  run_service.py  simple_client.py  test_corrected_implementation.py  test_langfuse_sdk.py  test_models.py  test_structured_traces.py
src/langfuse_observability/: main.py
src/langfuse_observability/api/: __init__.py  main.py
src/langfuse_observability/shared/: __init__.py  bedrock_mapper.py  langfuse_registrar.py  models.py  settings.py  trace_registrar.py
src/langfuse_observability/worker/: __init__.py  celery_app.py  main.py  tasks.py
