[project]
name = "langfuse-observability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.19",
    "celery>=5.5.3",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
